<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication3.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication3.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication3.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/action_notifications_to_collectedPostsFragment"
            app:destination="@id/collectedPostsFragment" />
    </fragment>

    <fragment
        android:id="@+id/collectedPostsFragment"
        android:name="com.example.myapplication3.ui.notifications.CollectedPostsFragment"
        android:label="收藏内容"
        tools:layout="@layout/fragment_collected_posts" />

    <!-- Post detail fragment removed -->

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.myapplication3.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

</navigation>
