<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <EditText
        android:id="@+id/current_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/auth_change_password_current_hint"
        android:inputType="textPassword"
        android:padding="12dp" />

    <EditText
        android:id="@+id/new_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/auth_change_password_new_hint"
        android:inputType="textPassword"
        android:padding="12dp" />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/auth_change_password_confirm_hint"
        android:inputType="textPassword"
        android:padding="12dp" />

</LinearLayout>
